@@ -1,11 +1,20 @@
 ### To do list: ###
 
-* nothing.
+* rendre les icones de batterie et signal clickable pour avoir la valeur exact.
 
   
 ### To fix list: ###
 
 * nothing.
+
+
+### December 27 2021, Release version 0.8.2 ###
+
+  * MODIFIED:
+    * improved timestamp for data coming from mqtt server.
+
+  * ADDED:
+    * logging messages have been added for MqttToDbThread.
 
 
 ### December 26 2021, Release version 0.8.1 ###
